<resources>
    <string name="title_app_name">Civic Duty</string>
    <string name="share_address_text">This is my address: %1$s</string>

    <!-- Buttons -->
    <string name="button_submit">Submit</string>
    <string name="button_edit">Edit</string>

    <!-- Edit Page -->
    <string name="title_edit_information">Edit Information</string>
    <string name="edit_address">Edit Address</string>
    <string name="address">Address</string>


    <!-- ERROR DIALOG -->
    <string name="error_message">Alert Problems Oy Vey</string>
    <string name="action_ok">OK…</string>
    <string name="about_civic_duty">About Civic Duty</string>
    <string name="about_text"> For any U.S. residential address, you can look up who represents that address at each elected level of government. During supported elections, you can also look up polling places, early vote location, candidate data, and other election official information.</string>
    <string name="share_address">Share Address</string>
    <string name="lookup_button">Lookup Information</string>
</resources>
