<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/displayFragment">

    <fragment
        android:id="@+id/displayFragment"
        android:name="com.amymejenkins.civicduty.screens.title.TitleFragment"
        android:label="@string/title_app_name"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_displayFragment_to_editFragment"
            app:destination="@id/editFragment" />
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="com.amymejenkins.civicduty.screens.edit.EditFragment"
        android:label="@string/title_edit_information"
        tools:layout="@layout/fragment_edit" >
        <action
            android:id="@+id/action_editFragment_to_displayFragment"
            app:destination="@id/displayFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.amymejenkins.civicduty.screens.about.AboutFragment"
        android:label="@string/about_civic_duty"
        tools:layout="@layout/fragment_about" />
</navigation>